tests/spec/emit/snapshots/compound_index_target_frozen_before_rhs.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn run() -> Result<(), string> {
    let mut xs = [10, 20]
    let mut i = 0
    let bump = || -> Result<int, string> {
      i = 1
      Ok(5)
    }
    xs[i] += bump()?
    Ok(())
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func run() lisette.Result[struct{}, string] {
	xs := []int{10, 20}
	i := 0
	bump := func() lisette.Result[int, string] {
		i = 1
		return lisette.MakeResultOk[int, string](5)
	}
	base := xs
	idx := i
	left := base[idx]
	check := bump()
	if check.Tag != lisette.ResultOk {
		return lisette.MakeResultErr[struct{}, string](check.ErrVal)
	}
	base[idx] = left + check.OkVal
	return lisette.MakeResultOk[struct{}, string](struct{}{})
}
