tests/spec/emit/snapshots/const_bitwise_not_stays_const.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  const MASK = ^1
  
  fn main() {
    let _ = MASK
  }
---
package main

const Mask int = ^1

func main() {
	_ = Mask
}
