tests/spec/emit/snapshots/const_eligibility_does_not_leak_across_shadow.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nimport \"go:fmt\"\n\nfn make() -> int {\n  2\n}\n\nfn main() {\n  const x = 1\n  let x = make()\n  const y = x\n  fmt.Println(y)\n}\n"
---
package main

import "fmt"

func make_() int {
	return 2
}

func main() {
	const x int = 1
	var y int = make_()
	fmt.Println(y)
}
