tests/spec/emit/snapshots/const_eligibility_does_not_leak_out_of_block.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nimport \"go:fmt\"\n\nfn make() -> int {\n  2\n}\n\nfn main() {\n  {\n    const X = 1\n    fmt.Println(X)\n  }\n  let x = make()\n  const Y = x\n  fmt.Println(Y)\n}\n"
---
package main

import "fmt"

func make_() int {
	return 2
}

func main() {
	{
		const X int = 1
		fmt.Println(X)
	}
	x := make_()
	var Y int = x
	fmt.Println(Y)
}
