tests/spec/emit/snapshots/const_expression.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  const RESULT = 10 + 20
  
  fn test() -> int {
    RESULT * 2
  }
---
package main

const Result int = 10 + 20

func test() int {
	return Result * 2
}
