tests/spec/emit/snapshots/const_go_keyword_name.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nimport \"go:fmt\"\n\nconst range: int = 42\n\nfn main() {\n  fmt.Println(range)\n}\n"
---
package main

import "fmt"

const range_ int = 42

func main() {
	fmt.Println(range_)
}
