tests/spec/emit/snapshots/const_imported_constant_stays_const.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:fmt"
  import "go:time"
  
  const DELAY = time.Second / 12
  
  fn main() {
    fmt.Println(DELAY)
  }
---
package main

import (
	"fmt"
	"time"
)

const Delay time.Duration = time.Second / 12

func main() {
	fmt.Println(Delay)
}
