tests/spec/emit/snapshots/const_imported_nonliteral_constant_stays_const.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  import "go:example.com/consts"
  
  const DELAY = consts.SHIFT / 12
  
  fn main() {
    let _ = DELAY
  }
---
package main

import "example.com/consts"

const Delay int = consts.SHIFT / 12

func main() {
	_ = Delay
}
